; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_srq.c_mlx5_core_query_srq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_srq.c_mlx5_core_query_srq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { i32 }
%struct.mlx5_core_srq = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.mlx5_srq_attr = type { i32 }

@MLX5_RES_XSRQ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5_core_query_srq(%struct.mlx5_core_dev* %0, %struct.mlx5_core_srq* %1, %struct.mlx5_srq_attr* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx5_core_dev*, align 8
  %6 = alloca %struct.mlx5_core_srq*, align 8
  %7 = alloca %struct.mlx5_srq_attr*, align 8
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %5, align 8
  store %struct.mlx5_core_srq* %1, %struct.mlx5_core_srq** %6, align 8
  store %struct.mlx5_srq_attr* %2, %struct.mlx5_srq_attr** %7, align 8
  %8 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %5, align 8
  %9 = getelementptr inbounds %struct.mlx5_core_dev, %struct.mlx5_core_dev* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %3
  %13 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %5, align 8
  %14 = load %struct.mlx5_core_srq*, %struct.mlx5_core_srq** %6, align 8
  %15 = load %struct.mlx5_srq_attr*, %struct.mlx5_srq_attr** %7, align 8
  %16 = call i32 @query_srq_cmd(%struct.mlx5_core_dev* %13, %struct.mlx5_core_srq* %14, %struct.mlx5_srq_attr* %15)
  store i32 %16, i32* %4, align 4
  br label %34

17:                                               ; preds = %3
  %18 = load %struct.mlx5_core_srq*, %struct.mlx5_core_srq** %6, align 8
  %19 = getelementptr inbounds %struct.mlx5_core_srq, %struct.mlx5_core_srq* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @MLX5_RES_XSRQ, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %5, align 8
  %26 = load %struct.mlx5_core_srq*, %struct.mlx5_core_srq** %6, align 8
  %27 = load %struct.mlx5_srq_attr*, %struct.mlx5_srq_attr** %7, align 8
  %28 = call i32 @query_xrc_srq_cmd(%struct.mlx5_core_dev* %25, %struct.mlx5_core_srq* %26, %struct.mlx5_srq_attr* %27)
  store i32 %28, i32* %4, align 4
  br label %34

29:                                               ; preds = %17
  %30 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %5, align 8
  %31 = load %struct.mlx5_core_srq*, %struct.mlx5_core_srq** %6, align 8
  %32 = load %struct.mlx5_srq_attr*, %struct.mlx5_srq_attr** %7, align 8
  %33 = call i32 @query_rmp_cmd(%struct.mlx5_core_dev* %30, %struct.mlx5_core_srq* %31, %struct.mlx5_srq_attr* %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %29, %24, %12
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @query_srq_cmd(%struct.mlx5_core_dev*, %struct.mlx5_core_srq*, %struct.mlx5_srq_attr*) #1

declare dso_local i32 @query_xrc_srq_cmd(%struct.mlx5_core_dev*, %struct.mlx5_core_srq*, %struct.mlx5_srq_attr*) #1

declare dso_local i32 @query_rmp_cmd(%struct.mlx5_core_dev*, %struct.mlx5_core_srq*, %struct.mlx5_srq_attr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
